@startuml

title __ITEM's Class Diagram__\n

  namespace  {
    namespace om.example.semesterexam {
      namespace item {
        class com.example.semesterexam.item.BalloonArrow {
            + BalloonArrow()
            + disableEffect()
            + effect()
            + getItemsName()
            + setDefault()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace item {
        class com.example.semesterexam.item.FasterPutBoom {
            - cycle : long
            - end : Timeline
            + FasterPutBoom()
            + disableEffect()
            + effect()
            + getItemsName()
            + setDefault()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace item {
        class com.example.semesterexam.item.Immortal {
            - cycle : long
            - end : Timeline
            + Immortal()
            + disableEffect()
            + effect()
            + getItemsName()
            + setDefault()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace item {
        class com.example.semesterexam.item.IncreaseDamage {
            - cycle : long
            - end : Timeline
            + IncreaseDamage()
            + disableEffect()
            + effect()
            + getItemsName()
            + setDefault()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace item {
        class com.example.semesterexam.item.PlusBullet {
            + PlusBullet()
            + disableEffect()
            + effect()
            + getItemsName()
            + setDefault()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace item {
        class com.example.semesterexam.item.PlusHP {
            + PlusHP()
            + disableEffect()
            + effect()
            + getItemsName()
            + setDefault()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace item {
        class com.example.semesterexam.item.SpeedUp {
            - cycle : long
            - end : Timeline
            + SpeedUp()
            + disableEffect()
            + effect()
            + getItemsName()
            + setDefault()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace item {
        class com.example.semesterexam.item.StopTime {
            - cycle : long
            - end : Timeline
            + StopTime()
            + disableEffect()
            + effect()
            + getItemsName()
            + setDefault()
        }
      }
    }
  }
  

  com.example.semesterexam.item.BalloonArrow -up-|> com.example.semesterexam.core.Item
  com.example.semesterexam.item.BalloonArrow o-- com.example.semesterexam.core.ItemsName : name
  com.example.semesterexam.item.FasterPutBoom -up-|> com.example.semesterexam.core.Item
  com.example.semesterexam.item.FasterPutBoom o-- com.example.semesterexam.core.ItemsName : name
  com.example.semesterexam.item.Immortal -up-|> com.example.semesterexam.core.Item
  com.example.semesterexam.item.Immortal o-- com.example.semesterexam.core.ItemsName : name
  com.example.semesterexam.item.IncreaseDamage -up-|> com.example.semesterexam.core.Item
  com.example.semesterexam.item.IncreaseDamage o-- com.example.semesterexam.core.ItemsName : name
  com.example.semesterexam.item.PlusBullet -up-|> com.example.semesterexam.core.Item
  com.example.semesterexam.item.PlusHP -up-|> com.example.semesterexam.core.Item
  com.example.semesterexam.item.SpeedUp -up-|> com.example.semesterexam.core.Item
  com.example.semesterexam.item.SpeedUp o-- com.example.semesterexam.core.ItemsName : name
  com.example.semesterexam.item.StopTime -up-|> com.example.semesterexam.core.Item
  com.example.semesterexam.item.StopTime o-- com.example.semesterexam.core.ItemsName : name


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
